--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -5,17 +5,21 @@ body #root .App .view .page.create-thread-page  {
   z-index: 1111;
 
   #page-content {
+    .thread-title {
+      height: 105px;
+      margin-bottom: 10px;
+      margin-top: 75px;
+    }
     .thread-title ul li input[type="text"] {
       color: #fff;
       font-size: 1.7em;
-      margin-bottom: 5px;
     }
 
     .persons-first-vertical-line {
       border-left: 1px solid $green-alert;
       height: 20%;
       margin-left: 7px;
-      top: 130px;
+      top: 160px;
       position: absolute;
     }
     .persons-middle-vertical-line {
@@ -43,7 +47,7 @@ body #root .App .view .page.create-thread-page  {
       border-left: 1px solid $green-alert;
       height: 15%;
       margin-left: 7px;
-      top: 130px;
+      top: 160px;
       position: absolute;
     }
     .contents-middle-vertical-line {
@@ -73,6 +77,15 @@ body #root .App .view .page.create-thread-page  {
       }
       .radio-filter {
         height: 90px;
+      }
+
+      .popup-set-thread-title {
+        padding: 0 5%;
+
+        ul li input[type="text"] {
+          color: #fff;
+          font-size: 1.7em;
+        }
       }
 
     }
@@ -283,7 +296,7 @@ body #root .App .view .page.create-thread-page  {
       left: 0;
       padding-top: 30px;
       position: absolute;
-      top: -50px;
+      top: -80px;
       width: 100%;
       z-index: 1111;
 
