QS-1096: Add thread filter title

--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -78,6 +78,10 @@ body #root .App .view .page.create-thread-page  {
       .radio-filter {
         height: 90px;
       }
+      .add-filter-title {
+        margin-bottom: 5px;
+        margin-left: 30px;
+      }
 
       .popup-set-thread-title {
         padding: 0 5%;
