--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -10,6 +10,16 @@ body #root .App .view .page.user-page {
     .profile-data-list {
       margin-top: 30px;
 
+      .profile-category {
+        width: 200%;
+        background-color: #1E1542;
+        margin-left: -50%;
+        margin-top: 10px;
+        padding-top: 1px;
+        padding-bottom: 1px;
+        padding-left: 50%;
+      }
+
       .profile-data, .profile-about-me {
         display: table;
         padding: 5px;
