Add loading icon when image is uploading

--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -76,6 +76,14 @@ body #root .App .view .page.gallery-page {
         }
       }
 
+      &.photo-loading-wrapper {
+        position: relative;
+
+        .loading-gif {
+          margin: 0 auto;
+        }
+      }
+
       &.selected-photo {
 
         position: relative;
