--- a/src/scss/pages/thread.scss
+++ b/src/scss/pages/thread.scss
@@ -3,10 +3,14 @@
 body #root .App .view .page.threads-page  {
   #page-content {
     margin-top: 70px;
+    width: 100%;
 
+    .thread-odd {
+      background: $deep-purple-translucent;
+    }
     .thread-listed {
       margin: 0 auto;
-      padding: 30px 0;
+      padding: 30px 7.5%;
       position: relative;
       .thread-first-image-wrapper {
         background-color: $deep-purple;
