QS-1107: Add links to user data

--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -75,6 +75,10 @@ body #root .App .view .page.user-page {
 
         .other-profile-stats {
           width: 100%;
+
+          a {
+            color: #fff;
+          }
         }
       }
       .other-profile-right {
