QS-1106: Do not user login as guest

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -96,7 +96,7 @@ body #root .App .view.home-view {
         display: inline-block;
         margin: 0 5px 10px;
         vertical-align: middle;
-        width: 35%;
+        //width: 35%; Uncomment to enable login as guest link styles
 
         a {
           font-weight: bold;
