--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -16,7 +16,7 @@ body #root .App .view .page #page-content.login-content {
       display: inline-block;
       margin: 0 5px 10px;
       vertical-align: middle;
-      width: 35%;
+      //width: 35%; Uncomment to enable login as guest link styles
 
       a {
         font-weight: bold;
