--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -8,7 +8,7 @@ body #root .App .view .page.create-thread-page  {
 
     .profile-category {
       width: 200%;
-      background-color: #1E1542;
+      background-color: $deep-purple-translucent;
       margin-left: -50%;
       margin-bottom: 10px;
       padding-top: 1px;
