--- a/src/scss/pages/edit-profile.scss
+++ b/src/scss/pages/edit-profile.scss
@@ -1,6 +1,6 @@
 @import '../_partials/colors';
 
-body #root .App .view .page.edit-profile-page  {
+body #root .App .view .page.user-page  {
   position: relative;
   z-index: 1111;
 
@@ -24,6 +24,7 @@ body #root .App .view .page.edit-profile-page  {
 
         .list-block {
           margin: 0 0 0 15px;
+          min-width: 250px;
         }
         .tags-and-choice-choice-radios {
           margin-top: 20px;
@@ -50,26 +51,18 @@ body #root .App .view .page.edit-profile-page  {
       vertical-align: middle;
     }
 
+    .tag-input-wrapper {
+      min-width: 250px;
+    }
+
     .profile-field {
       display: table-row;
       height: 70px;
 
-      .profile-field-background {
-        background: $deep-purple-translucent;
-        height: 25%;
-        left: 0;
-        margin-top: -15px;
-        opacity: 0.5;
-        padding: 40px 0;
+      .profile-field-remove {
+        cursor: pointer;
+        right: 10%;
         position: absolute;
-        width: 100%;
-        z-index: -2;
-
-        .profile-field-remove {
-          cursor: pointer;
-          float: right;
-          margin: -30px 2% 30px 0;
-        }
       }
 
       .text-radios {
@@ -127,6 +120,7 @@ body #root .App .view .page.edit-profile-page  {
       .list-block {
         display: inline-block;
         margin: 0;
+        min-width: 250px;
         vertical-align: middle;
         width: 100%;
 
@@ -166,6 +160,7 @@ body #root .App .view .page.edit-profile-page  {
 
       .location-filter-wrapper, .birthday-filter-wrapper {
         display: inline-block;
+        min-width: 250px;
         width: 110%;
         vertical-align: middle;
 
