QS-1110: Use infinite-calendar for DateInput

--- a/src/scss/_partials/_date-input.scss
+++ b/src/scss/_partials/_date-input.scss
@@ -1,3 +1,12 @@
+.date-input {
+	position: absolute;
+	left: 0;
+	input[type=date] {
+		color: $light-gray;
+		text-align: right;
+	}
+}
+
 .list-block ul li.date-item {
 	.item-content.date-content {
 		.date-label {
