--- a/src/scss/_partials/_date-input.scss
+++ b/src/scss/_partials/_date-input.scss
@@ -1,9 +1,8 @@
 .date-input {
 	position: absolute;
 	left: 0;
-	input[type=date] {
-		color: $light-gray;
-		text-align: right;
+	.Cal__Day__month, .Cal__Day__year {
+		color: $flesh-colored;
 	}
 }
 
