QS-1110: Fix first month day color

--- a/src/scss/_partials/_date-input.scss
+++ b/src/scss/_partials/_date-input.scss
@@ -2,7 +2,8 @@
 	position: absolute;
 	left: 0;
 	.Cal__Day__month, .Cal__Day__year {
-		color: $flesh-colored;
+		color: #000;
+		font-weight: bold;
 	}
 }
 
