--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -40,11 +40,11 @@ $nekuno-logo-font: 'klinic_slabmedium';
 
 @font-face {
 	font-family: 'Nekuno Icons';
-	src:  url('fonts/icomoon.eot?63m0t1');
-	src:  url('fonts/icomoon.eot?63m0t1#iefix') format('embedded-opentype'),
-	url('fonts/icomoon.ttf?63m0t1') format('truetype'),
-	url('fonts/icomoon.woff?63m0t1') format('woff'),
-	url('fonts/icomoon.svg?63m0t1#icomoon') format('svg');
+	src:  url('fonts/icomoon.eot?9xqxbg');
+	src:  url('fonts/icomoon.eot?9xqxbg#iefix') format('embedded-opentype'),
+	url('fonts/icomoon.ttf?9xqxbg') format('truetype'),
+	url('fonts/icomoon.woff?9xqxbg') format('woff'),
+	url('fonts/icomoon.svg?9xqxbg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -225,6 +225,9 @@ $nekuno-logo-font: 'klinic_slabmedium';
 }
 .icon-share:before {
 	content: "\e930";
+}
+.icon-grin2:before {
+	content: "\e931";
 }
 
 ::-webkit-input-placeholder {
