QS-1062: Last fix styles

--- a/src/scss/_partials/_messages-toolbar.scss
+++ b/src/scss/_partials/_messages-toolbar.scss
@@ -1,5 +1,5 @@
 #messages-toolbar .toolbar-inner {
-  background-color: #fff !important;
+  background-color: transparent !important;
   .toolbar.messagebar {
     border-top: 1px solid $light-gray;
     .toolbar-inner {
