QS-1122: Add loading images in threads

--- a/src/scss/pages/thread.scss
+++ b/src/scss/pages/thread.scss
@@ -25,6 +25,7 @@ body #root .App .view .page.threads-page  {
         z-index: 10;
 
         .thread-first-image-centered-wrapper {
+          background: #fff;
           border-radius: 50%;
           -moz-border-radius: 50%;
           -webkit-border-radius: 50%;
