--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -36,6 +36,7 @@
 @import '_partials/guest-banner';
 @import '_partials/empty-message';
 @import '_partials/processes-progress';
+@import '_partials/loading-spinner-css';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
