QS-1122: Change loading spinner color and images background

--- a/src/scss/_partials/_loading-spinner-css.scss
+++ b/src/scss/_partials/_loading-spinner-css.scss
@@ -7,7 +7,7 @@
 
 .circularG {
 	position: absolute;
-	background-color: $dark-gray;
+	background-color: #fff;
 	width: 14px;
 	height: 14px;
 	border-radius: 9px;
@@ -126,7 +126,7 @@
 
 .circularG-small {
 	position: absolute;
-	background-color: $dark-gray;
+	background-color: #fff;
 	width: 4px;
 	height: 4px;
 	border-radius: 3px;
