--- a/src/scss/pages/thread.scss
+++ b/src/scss/pages/thread.scss
@@ -16,22 +16,21 @@ body #root .App .view .page.threads-page  {
         width: 100%;
 
         .thread-background-image {
-          img {
-            height: auto;
-            margin: -25% 0 0 -10%;
-            opacity: 0.7;
-            -webkit-filter: blur(50px);
-            -moz-filter: blur(50px);
-            -o-filter: blur(50px);
-            -ms-filter: blur(50px);
-            filter: blur(50px);
-            overflow: hidden;
-            width: 120%;
-            /* A circled shadow around background image
-            -webkit-box-shadow: inset 0 0 200px #000000;
-            -moz-box-shadow: inset 0 0 200px #000000;
-            box-shadow: inset 0 0 200px #000000;*/
-          }
+          background-size: 100% auto !important;
+          height: 120%;
+          margin: -5% 0 0 -10%;
+          opacity: 0.7;
+          -webkit-filter: blur(50px);
+          -moz-filter: blur(50px);
+          -o-filter: blur(50px);
+          -ms-filter: blur(50px);
+          filter: blur(50px);
+          overflow: hidden;
+          width: 120%;
+          /* A circled shadow around background image
+          -webkit-box-shadow: inset 0 0 200px #000000;
+          -moz-box-shadow: inset 0 0 200px #000000;
+          box-shadow: inset 0 0 200px #000000;*/
         }
       }
     }
