--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -1,4 +1,5 @@
 .navbar {
+	height: 52px;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	position: fixed !important;
@@ -15,6 +16,8 @@
 	color: #fff;
 
 	#navbar-inner {
+		overflow-y: hidden;
+		overflow-x: hidden;
 		.row {
 			margin: auto;
 			width: 100%;
