--- a/src/scss/pages/thread.scss
+++ b/src/scss/pages/thread.scss
@@ -9,22 +9,28 @@ body #root .App .view .page.threads-page  {
       position: relative;
 
       .thread-background-image-wrapper {
+        background-color: #000;
         height: 100%;
         overflow: hidden;
         position: absolute;
         width: 100%;
+        z-index: -1;
 
         .thread-background-image {
           background-size: 100% auto !important;
           height: 120%;
           margin: -5% 0 0 -10%;
+          overflow: hidden;
+          width: 120%;
           -webkit-filter: blur(100px);
           -moz-filter: blur(100px);
           -o-filter: blur(100px);
           -ms-filter: blur(100px);
           filter: blur(100px);
-          overflow: hidden;
-          width: 120%;
+          backface-visibility: hidden;
+          perspective: 1000;
+          -webkit-backface-visibility: hidden;
+          -webkit-perspective: 1000;
           /* A circled shadow around background image
           -webkit-box-shadow: inset 0 0 200px #000000;
           -moz-box-shadow: inset 0 0 200px #000000;
@@ -33,7 +39,7 @@ body #root .App .view .page.threads-page  {
       }
     }
     .thread-odd {
-      background: $deep-purple-translucent;
+      //background: $deep-purple-translucent;
     }
     .thread-listed {
       margin: 0 auto;
@@ -49,7 +55,7 @@ body #root .App .view .page.threads-page  {
         position: relative;
         text-align: center;
         width: 81px;
-        z-index: 10;
+        z-index: 11;
 
         .thread-first-image-centered-wrapper {
           border-radius: 50%;
