QS-1159: Replace background images with box shadows

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -23,3 +23,22 @@ $twitter-blue: #55acee;
 $spotify-green: #82b919;
 $google-red: #d34836;
 $youtube-red: #cd201f;
+$material-red: #F44336;
+$material-pink: #E91E63;
+$material-purple: #9C27B0;
+$material-deep-purple: #673AB7;
+$material-indigo: #3F51B5;
+$material-blue: #2196F3;
+$material-light-blue: #03A9F4;
+$material-cyan: #00BCD4;
+$material-teal: #009688;
+$material-green: #4CAF50;
+$material-light-green: #8BC34A;
+$material-lime: #CDDC39;
+$material-yellow: #FFEB3B;
+$material-amber: #FFC107;
+$material-orange: #FF9800;
+$material-deep-orange: #FF5722;
+$material-brown: #795548;
+$material-grey: #9E9E9E;
+$material-blue-grey: #607D8B;
