QS-1145: Add thread toolbal

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -37,6 +37,7 @@
 @import '_partials/empty-message';
 @import '_partials/processes-progress';
 @import '_partials/loading-spinner-css';
+@import '_partials/thread-toolbar';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
