--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -40,11 +40,11 @@ $nekuno-logo-font: 'klinic_slabmedium';
 
 @font-face {
 	font-family: 'Nekuno Icons';
-	src:  url('fonts/icomoon.eot?9xqxbg');
-	src:  url('fonts/icomoon.eot?9xqxbg#iefix') format('embedded-opentype'),
-	url('fonts/icomoon.ttf?9xqxbg') format('truetype'),
-	url('fonts/icomoon.woff?9xqxbg') format('woff'),
-	url('fonts/icomoon.svg?9xqxbg#icomoon') format('svg');
+	src:  url('fonts/icomoon.eot?8z93yf');
+	src:  url('fonts/icomoon.eot?8z93yf#iefix') format('embedded-opentype'),
+	url('fonts/icomoon.ttf?8z93yf') format('truetype'),
+	url('fonts/icomoon.woff?8z93yf') format('woff'),
+	url('fonts/icomoon.svg?8z93yf#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -68,6 +68,21 @@ $nekuno-logo-font: 'klinic_slabmedium';
 	opacity: 0.5;
 }
 
+.icon-heart:before {
+	content: "\f004";
+}
+.icon-star:before {
+	content: "\f005";
+}
+.icon-thumbs-up:before {
+	content: "\f164";
+}
+.icon-thumbs-down:before {
+	content: "\f165";
+}
+.icon-spinner:before {
+	content: "\e97a";
+}
 .icon-circle:before {
 	content: "\e929";
 }
